--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.3
 
 dev_dependencies:
+  
+  build_runner: ^2.1.0
+  build_test: ^2.1.0
+  build_web_compilers: ^3.0.0
 
   flutter_test:
     sdk: flutter
